--- a/components/contact/contact-form.module.scss
+++ b/components/contact/contact-form.module.scss
@@ -1,68 +1,106 @@
+@use "../../styles/pallet.module.scss";
+
 .contact {
-  margin: var(--size-8) auto;
-  border-radius: 6px;
-  background-color: var(--color-grey-100);
   width: 90%;
   max-width: 50rem;
+  border-radius: 6px;
   padding: var(--size-4);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  margin: var(--size-8) auto;
+
   font-size: var(--size-6);
-}
+  background: rgba(53, 53, 77, 0.699);
+  box-shadow: 0px 20px 29px -7px rgba(0, 0, 0, 0.3);
 
-.contact h1 {
-  font-size: var(--size-8);
-  margin: var(--size-4) 0;
-  text-align: left;
-}
-
-.form label {
-  display: block;
-  font-family: "Oswald", sans-serif;
-  font-weight: bold;
-  margin: var(--size-2) 0 var(--size-1) 0;
-}
-
-.form input,
-.form textarea {
-  font: inherit;
-  padding: var(--size-1);
-  border-radius: 4px;
-  width: 100%;
-  border: 1px solid var(--color-grey-400);
-  background-color: var(--color-grey-50);
-  resize: none;
+  backdrop-filter: blur(7.6px);
+  -webkit-backdrop-filter: blur(7.6px);
+  border: 1px solid rgba(61, 61, 61, 0.2);
+  > h2 {
+    font-size: var(--size-8);
+    font-family: inherit, sans-serif;
+    color: var(--color-light-neutral-3);
+    margin: var(--size-4) 0;
+    text-align: center;
+  }
+  .form {
+    .actions {
+      margin-top: var(--size-4);
+      text-align: right;
+      > button {
+        cursor: pointer;
+        width: max-content;
+        border-radius: 4px;
+        padding: 0.5rem 0.7rem;
+        font-size: var(--size-6);
+        font-family: inherit, sans-serif;
+        color: var(--color-light-neutral-7);
+        backdrop-filter: blur(10.2px);
+        -webkit-backdrop-filter: blur(10.2px);
+        border: 1px solid rgb(19, 28, 49);
+        background-color: rgba(20, 35, 48, 0.671);
+        box-shadow: 0px 20px 29px -7px rgba(0, 0, 0, 0.13);
+        &:hover,
+        :active {
+          background-color: rgba(20, 71, 109, 0.603);
+          border-radius: 4px;
+          box-shadow: inset 0px 20px 29px -7px rgba(0, 0, 0, 0.322);
+          backdrop-filter: blur(10.2px);
+          -webkit-backdrop-filter: blur(10.2px);
+          border: 1px solid rgba(40, 54, 66, 0.534);
+        }
+      }
+    }
+  }
 }
 
 .controls {
-  display: flex;
-  column-gap: 1rem;
-  flex-wrap: wrap;
-}
+  @include pallet.grid-it(
+    repeat(2, minmax(15rem, 1fr)),
+    repeat(3, minmax(max-content, max-content)),
+    1rem
+  );
 
-.control {
-  flex: 1;
-  min-width: 10rem;
-}
-
-.actions {
-  margin-top: var(--size-4);
-  text-align: right;
-}
-
-.form button {
-  font: inherit;
-  cursor: pointer;
-  background-color: var(--color-primary-700);
-  border: 1px solid var(--color-primary-700);
-  padding: var(--size-2) var(--size-4);
-  border-radius: 4px;
-  color: var(--color-primary-50);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-}
-
-.form button:hover {
-  background-color: var(--color-primary-500);
-  border-color: var(--color-primary-500);
+  .control {
+    @include pallet.flex-it(column, flex-start, flex-end, 0.5em);
+    flex: 1;
+    min-width: 10rem;
+    > label {
+      display: block;
+      text-align: left;
+      font-family: "Oswald", sans-serif;
+      color: var(--color-light-neutral-3);
+      font-weight: bold;
+    }
+    .input {
+      font: inherit;
+      padding: var(--size-1);
+      border-radius: 4px;
+      width: 100%;
+      border: 1px solid var(--color-grey-400);
+      background-color: var(--color-grey-50);
+      resize: none;
+    }
+    &_text {
+      grid-row: 2/3;
+      grid-column: 1/3;
+      @include pallet.flex-it(column, flex-start, flex-end, 0.5em);
+      > label {
+        display: block;
+        text-align: left;
+        font-family: "Oswald", sans-serif;
+        color: var(--color-light-neutral-3);
+        font-weight: bold;
+      }
+      .input {
+        font: inherit;
+        padding: var(--size-1);
+        border-radius: 4px;
+        width: 100%;
+        border: 1px solid var(--color-grey-400);
+        background-color: var(--color-grey-50);
+        resize: none;
+      }
+    }
+  }
 }
 
 @media (min-width: 768px) {
