--- a/components/home-page/hero.module.scss
+++ b/components/home-page/hero.module.scss
@@ -1,41 +1,87 @@
+@use "../../styles/pallet.module.scss";
+
 .hero {
-  text-align: center;
-  background-image: linear-gradient(
-    to bottom,
-    var(--color-grey-900),
-    var(--color-grey-700)
+  @include pallet.grid-it(
+    repeat(8, minmax(15rem, 1fr)),
+    repeat(3, minmax(15rem, 1fr)),
+    1em
   );
 
-  padding: var(--size-8) 0;
-}
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.3),
+      rgba(255, 255, 255, 0.9)
+    ),
+    url(../../public/images/site/rohit-tandon-9wg5jCEPBsw-unsplash.webp);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  backdrop-filter: blur(4.2px);
+  -webkit-backdrop-filter: blur(4.2px);
 
-.image {
-  width: 300px;
-  height: 300px;
-  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
-  border-radius: 50%;
-  overflow: hidden;
-  background-color: var(--color-grey-700);
-  margin: auto;
-}
+  text-align: center;
+  align-items: center;
+  justify-items: center;
 
-.image img {
-  object-fit: cover;
-  object-position: top;
-  width: 100%;
-  height: 100%;
-}
+  padding: var(--size-16);
 
-.hero h1 {
-  font-size: var(--size-16);
-  margin: var(--size-4) 0;
-  color: var(--color-grey-300);
-}
+  .image {
+    grid-row: 1/3;
+    grid-column: 1/3;
+    @include pallet.flex-it(column, center, center, 0.5em);
+    z-index: 100;
+    width: 150px;
+    aspect-ratio: 1/1;
+    box-shadow: 0 1px 8px rgb(37, 23, 102);
+    border-radius: 50%;
+    overflow: hidden;
+    background-color: var(--color-grey-700);
+  }
 
-.hero p {
-  font-size: var(--size-6);
-  color: var(--color-grey-200);
-  width: 90%;
-  max-width: 40rem;
-  margin: auto;
+  .squer {
+    @include pallet.flex-it(column, flex-end, flex-end, 0.5em);
+    width: 51rem;
+    height: 15rem;
+    grid-row: 2/3;
+    grid-column: 2/4;
+    border-bottom: 2px solid rgba(56, 51, 71, 0.342);
+    border-left: 2px solid rgba(56, 51, 71, 0.342);
+    transform: translateX(-5px);
+    z-index: 9;
+    justify-self: start;
+    align-self: end;
+    > h1 {
+      align-self: end;
+      margin: var(--size-4) 0;
+      font-size: var(--size-16);
+      color: var(--color-grey-600);
+      text-align: right;
+    }
+  }
+
+  > p {
+    justify-self: start;
+    text-align: left;
+    grid-row: 3/4;
+    grid-column: 2/5;
+    font-size: var(--size-8);
+    color: var(--color-grey-700);
+    width: 90%;
+    max-width: 40rem;
+    margin: 0 2rem;
+  }
+  .form_container {
+    grid-row: 1/4;
+    grid-column: 5/9;
+    background-color: transparent;
+    @include pallet.grid-it(
+      repeat(1, minmax(15rem, 1fr)),
+      repeat(1, minmax(15rem, 1fr)),
+      1em
+    );
+    border-left: 2px solid rgba(56, 51, 71, 0.342);
+    box-shadow: 20px 0px 42px -30px rgba(37, 23, 102, 0.45) inset;
+    justify-self: start;
+    width: 70rem;
+    height: 40rem;
+  }
 }
