--- a/components/navigation/logo.module.scss
+++ b/components/navigation/logo.module.scss
@@ -1,9 +1,12 @@
 .logo {
-  text-transform: uppercase;
-  font-size: var(--size-5);
+  grid-column: 1/ 2;
+
   font-weight: bold;
-  font-family: "Oswald", sans-serif;
+  font-size: var(--size-7);
+  text-transform: uppercase;
   color: var(--color-grey-50);
+  font-family: "Oswald", sans-serif;
+  text-shadow: -5px 7px 9px rgba(0, 0, 0, 0.322);
 }
 
 @media (min-width: 768px) {
