--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -42,12 +42,12 @@
   --size-4: 1rem;
   --size-5: 1.25rem;
   --size-6: 1.5rem;
+  --size-7: 1.75rem;
   --size-8: 2rem;
   --size-16: 4rem;
   --size-20: 5rem;
   --size-40: 10rem;
 }
-
 // FONT VARIABLES
 $font-overall: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
