--- a/components/contact/contact-form.module.scss
+++ b/components/contact/contact-form.module.scss
@@ -1,6 +1,7 @@
 @use "../../styles/pallet.module.scss";
 
 .contact {
+  animation: form-appear 1s ease-out forwards;
   width: 90%;
   max-width: 50rem;
   border-radius: 6px;
@@ -107,5 +108,17 @@
   .contact h1 {
     font-size: var(--size-16);
     text-align: center;
+  }
+}
+
+@keyframes form-appear {
+  from {
+    opacity: 0;
+    transform: translateX(-10rem);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
