--- a/components/home-page/hero.module.scss
+++ b/components/home-page/hero.module.scss
@@ -28,13 +28,33 @@
     grid-row: 1/3;
     grid-column: 1/3;
     @include pallet.flex-it(column, center, center, 0.5em);
+    position: relative;
     z-index: 100;
-    width: 150px;
+    width: 15rem;
     aspect-ratio: 1/1;
     box-shadow: 0 1px 8px rgb(37, 23, 102);
     border-radius: 50%;
     overflow: hidden;
     background-color: var(--color-grey-700);
+    &::before {
+      @include pallet.flex-it(column, center, center, 0.5em);
+      content: "Hi again ";
+      font-size: var(--size-8);
+      align-content: center;
+      color: var(--color-light-neutral-7);
+      width: 100%;
+      aspect-ratio: 1/1;
+      position: absolute;
+      background: rgba(0, 0, 0, 0.7);
+      opacity: 0;
+
+      transition: opacity 0.2s ease;
+      z-index: 1000;
+    }
+    &:hover::before {
+      opacity: 1;
+      transition: opacity 0.2s ease;
+    }
   }
 
   .squer {
@@ -55,6 +75,38 @@
       font-size: var(--size-16);
       color: var(--color-grey-600);
       text-align: right;
+      animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
+      @keyframes scale {
+        100% {
+          transform: scale(1);
+        }
+      }
+      > span {
+        display: inline-block;
+        opacity: 0;
+        filter: blur(4px);
+        &:nth-child(1) {
+          animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+        }
+
+        &:nth-child(2) {
+          animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+        }
+
+        &:nth-child(3) {
+          animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
+        }
+
+        &:nth-child(4) {
+          animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+        }
+      }
+      @keyframes fade-in {
+        100% {
+          opacity: 1;
+          filter: blur(0);
+        }
+      }
     }
   }
 
@@ -68,6 +120,55 @@
     width: 90%;
     max-width: 40rem;
     margin: 0 2rem;
+    > span {
+      display: inline-block;
+      opacity: 0;
+      filter: blur(4px);
+      &:nth-child(1) {
+        animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+      }
+
+      &:nth-child(2) {
+        animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+      }
+
+      &:nth-child(3) {
+        animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+      }
+
+      &:nth-child(4) {
+        animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+      }
+      &:nth-child(5) {
+        animation: fade-in 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+      }
+
+      &:nth-child(6) {
+        animation: fade-in 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+      }
+
+      &:nth-child(7) {
+        animation: fade-in 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+      }
+
+      &:nth-child(8) {
+        animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+      }
+
+      &:nth-child(9) {
+        animation: fade-in 0.8s 1.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
+      }
+
+      &:nth-child(10) {
+        animation: fade-in 0.8s 2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+      }
+    }
+    @keyframes fade-in {
+      100% {
+        opacity: 1;
+        filter: blur(0);
+      }
+    }
   }
   .form_container {
     grid-row: 1/4;
@@ -83,5 +184,68 @@
     justify-self: start;
     width: 70rem;
     height: 40rem;
+  }
+  @media (max-width: 1440px) {
+    @include pallet.grid-it(
+      repeat(8, minmax(10rem, 1fr)),
+      repeat(3, minmax(15rem, 1fr)),
+      1em
+    );
+
+    .form_container {
+      @include pallet.grid-it(
+        repeat(1, minmax(10rem, 1fr)),
+        repeat(1, minmax(15rem, 1fr)),
+        1em
+      );
+      width: 60rem;
+    }
+  }
+  @media (max-width: 1024px) {
+    @include pallet.grid-it(
+      repeat(5, minmax(10rem, 1fr)),
+      repeat(4, minmax(7rem, 1fr)),
+      1em
+    );
+
+    .image {
+      grid-row: 1/3;
+      grid-column: 1/2;
+    }
+
+    .squer {
+      @include pallet.flex-it(row, center, center, 0.5em);
+      border-left: none;
+      width: 30rem;
+      height: 15rem;
+      grid-row: 1/3;
+      grid-column: 2/4;
+      transform: translateY(15px);
+      align-self: center;
+      > h1 {
+        align-self: start;
+        margin: var(--size-4) 0;
+        font-size: var(--size-16);
+        color: var(--color-grey-600);
+        text-align: left;
+      }
+    }
+    > p {
+      justify-self: start;
+      text-align: left;
+      grid-row: 1/3;
+      grid-column: 4/-1;
+    }
+
+    .form_container {
+      grid-row: 3/5;
+      grid-column: 2/5;
+      @include pallet.grid-it(
+        repeat(1, minmax(10rem, 1fr)),
+        repeat(1, minmax(15rem, 1fr)),
+        1em
+      );
+      width: 60rem;
+    }
   }
 }
