--- a/components/navigation/main-navigation.module.scss
+++ b/components/navigation/main-navigation.module.scss
@@ -3,6 +3,7 @@
 .header {
   width: 100vw;
   height: 7rem;
+  animation: head-appear 1s ease-out forwards;
 
   @include pallet.grid-it(
     max-content minmax(20rem, 1fr) max-content,
@@ -23,12 +24,34 @@
   -webkit-backdrop-filter: blur(7.6px);
   border-bottom: 1px solid rgba(61, 61, 61, 0.2);
 
+  @media (max-width: 1440px) {
+    @include pallet.grid-it(
+      max-content minmax(20rem, 1fr) max-content,
+      max-content,
+      1rem
+    );
+    padding: 0 2%;
+    .logo {
+      justify-self: end;
+    }
+    .navbar {
+      justify-self: center;
+    }
+    .github {
+      justify-self: end;
+    }
+  }
+
   .logo {
     @include pallet.flex-it(row, center, space-around, 0.5em);
   }
 
   .navbar {
     @include pallet.flex-it(row, center, space-around, 0.5em);
+    width: max-content;
+
+    border-right: 2px solid rgba(56, 51, 71, 0.342);
+    box-shadow: -45px 0px 40px -25px rgba(37, 23, 102, 0.45) inset;
 
     padding: 1rem;
     > ul {
@@ -39,6 +62,7 @@
       list-style: none;
 
       > li {
+        animation: nav-appear 1s ease-out forwards;
         width: max-content;
         margin: 0;
 
@@ -149,12 +173,25 @@
   }
 }
 
-@media (min-width: 768px) {
-  .header ul {
-    gap: 0.5rem;
+@keyframes head-appear {
+  from {
+    opacity: 0;
+    transform: translateY(-3rem);
   }
 
-  .header a {
-    font-size: var(--size-5);
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes nav-appear {
+  from {
+    opacity: 0;
+    transform: translateX(10rem);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
